CHANGES IN VERSION 2.2.10
-------------------------
BUG FIX
    o Improvised somaticInteractions. Better plot and displays countsIssue: #418, #420
    o Improvised estimateSignatures function Issue: #433

CHANGES IN VERSION 2.2.0
-------------------------
NEW FUNCTIONS AND FEATURES
    o `survGroup`, `mafSurvGroup` - Predict genes/genesets associated with survival. Issue: #396
    o New argument `altered` in `oncoplot` to plot top genes based on CNV or mutation. Default is `FALSE`. Issue: #405

DEPRECATED
    o `oncotate` - Oncotator is no longer supported by Broad. Issue: #403 #384 #381
    o `findPathways` argument in `somaticInteractions` function has been deprecated

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Signature analysis has been modified to be more flexible. It now consits of three functions namely:
        o `estimateSignatures` - which measures cophenetic correlation metric (a measure of goodness of fit) for a range of values
        o `plotCophenetic` - which draws an elbow plot of cophenetic correlation metric from `estimateSignatures` and helps to decide an optimal number of signature `(n)`.
        o `extractSignatures` - which then extracts final `n` signatures
    o `compareSignatures` now has two databases of known signatures. Classic 30 signatures and newer 67 SBS signatures from COSMIC.

BUG FIX
    o `gisticChromPlot` bug fix. Issue: #392
    o `annovarToMaf` bug fix for results without exonic variants. Issue: #388
    o Avoid conflict with `plotly::layout` with `graphcis::layout`. Issue: #387 #202
    o Fix side-bar heights in Oncoplot with copy-number data. Issue: #383
    o Update y-axis label for `tcgaCompare` plot. Issue: #366
    o `annovarToMaf` annotating variants with MNPs. Issue: #335