@@ -1,4 +1,4 @@
-#' Subset MAF
+#' Subset MAF objects
 #'
 #' @description Subsets MAF based on given conditions.
 #' @param maf an MAF object generated by \code{\link{read.maf}}
@@ -6,6 +6,7 @@
 #' @param genes subset by these genes
 #' @param fields include only these fields along with necessary fields in the output
 #' @param query query string. e.g, "Variant_Classification == 'Missense_Mutation'" returns only Missense variants.
+#' @param clinQuery query by clinical variable.
 #' @param mafObj returns output as MAF class \code{\link{MAF-class}}. Default TRUE
 #' @param includeSyn Default TRUE, only applicable when mafObj = FALSE. If mafObj = TRUE, synonymous variants will be stored in a seperate slot of MAF object.
 #' @param isTCGA Is input MAF file from TCGA source.
@@ -25,25 +26,41 @@
 #' subsetMaf(maf = laml, tsb = c('TCGA-AB-3009', 'TCGA-AB-2933'), fields = 'i_TumorVAF_WU')
 #' @export
 
-subsetMaf = function(maf, tsb = NULL, genes = NULL, fields = NULL, query = NULL, clinQuery = NULL, mafObj = TRUE, includeSyn = TRUE, isTCGA = FALSE, dropLevels = TRUE, restrictTo = 'all'){
+subsetMaf = function(maf, tsb = NULL, genes = NULL, query = NULL, clinQuery = NULL, fields = NULL, mafObj = TRUE, includeSyn = TRUE, isTCGA = FALSE, dropLevels = TRUE, restrictTo = 'all'){
 
-
-  if(length(restrictTo) > 1){
-    stop("restrictTo can only be 'all', 'cnv', or 'mutations'")
+  if(all(c(is.null(tsb), is.null(genes), is.null(query), is.null(clinQuery)))){
+    stop("Please provide sample names or genes or a query to subset by.")
   }
 
-  if(!restrictTo %in% c("all", "cnv", "mutations")){
-    stop("restrictTo can only be 'all', 'cnv', or 'mutations'")
-  }
-
+  restrictTo = match.arg(arg = restrictTo, choices = c("all", "cnv", "mutations"), several.ok = FALSE)
 
   #Synonymous variants
   maf.silent <- maf@maf.silent
   #Main data
   maf.dat <- maf@data
   #Annotations
-  maf.anno <- maf@clinical.data
+  maf.anno <- data.table::copy(x = maf@clinical.data)
 
+  if(!is.null(clinQuery)){
+    if(!is.null(tsb)){
+      warning("sample names provided to tsb argument will be over written by clinical query", immediate. = TRUE)
+    }
+    message("-subsetting by clinical data..")
+    maf.anno = maf.anno[eval(parse(text = clinQuery))]
+
+    tsb = unique(as.character(maf.anno[,Tumor_Sample_Barcode]))
+    if(length(tsb) > 0){
+      message(paste0('--', length(tsb)), " samples meet the clinical query")
+    }else{
+      if(all(c(is.null(query), is.null(genes)))){
+        stop("--None of the samples meet the clinical query", call. = FALSE)
+      }else{
+        message("--None of the samples meet the clinical query")
+        maf.anno <- data.table::copy(x = maf@clinical.data)
+      }
+      tsb = NULL
+    }
+  }
 
   if(restrictTo == "cnv"){
     maf.silent.rest = maf.silent[!Variant_Type %in% 'CNV']
@@ -59,9 +76,9 @@ subsetMaf = function(maf, tsb = NULL, genes = NULL, fields = NULL, query = NULL,
     maf.dat = maf.dat[!Variant_Type %in% 'CNV']
   }
 
-
   #Select
   if(!is.null(tsb)){
+    #message("-subsetting by tumor sample barcodes..")
     tsb = as.character(tsb)
     if(isTCGA){
       tsb = substr(x = tsb, start = 1, stop = 12)
@@ -71,12 +88,14 @@ subsetMaf = function(maf, tsb = NULL, genes = NULL, fields = NULL, query = NULL,
   }
 
   if(!is.null(genes)){
+    #message("-subsetting by genes..")
     genes = as.character(genes)
     maf.dat = maf.dat[Hugo_Symbol %in% genes, ]
     maf.silent = maf.silent[Hugo_Symbol %in% genes, ]
   }
 
   if(!is.null(query)){
+    #message("-subsetting by query..")
     maf.dat = maf.dat[eval(parse(text=query))]
     maf.silent = maf.silent[eval(parse(text=query))]
   }
